fixed the overlaping issue and added hover effect on nav bar

--- a/style.css
+++ b/style.css
@@ -27,10 +27,21 @@ nav ul li {
 
 nav ul li a {
   text-decoration: none;
-  color: wheat;
+  color:white;
+  position: relative;
 }
-nav ul li a:hover {
-  color: rgb(154, 154, 230);
+nav ul li a::after{
+  content: '';
+  width: 0;
+  height: 3px;
+  background-color: rgb(87, 87, 241);
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  transition: 0.5s;
+}
+nav ul li a:hover::after {
+ width: 100%;
   font-size: 1.02rem;
 }
 
@@ -59,6 +70,15 @@ main hr {
 .leftSection {
   font-size: 2.5rem;
 }
+.leftSection .btn{
+padding: 12px;
+background-color: rgb(30, 30, 105);
+color: white;
+border: 2px solid white;
+border-radius: 6px;
+font-size: 10px;
+cursor: pointer;
+}
 .rightSection img {
   width: 100%;
 }
@@ -72,7 +92,8 @@ main hr {
 
 .SecondSection {
   max-width: 80vw;
-  margin: auto ;
+  margin: 80px auto ;
+  height: 80vh;
 }
 .SecondSection h1 {
   font-size: 1.9rem;
@@ -114,7 +135,9 @@ main hr {
 }
 
 footer{
-  background-color: rgb(40, 40, 107);
+  background-color:rgb(0 12 53);
+  padding: 23px 0;
+   
 }
 .footer{
   display: flex;
@@ -122,3 +145,16 @@ footer{
   justify-content: space-evenly;
 }
 
+.footer ul {
+  list-style: none;
+}
+
+.footer > div{
+  width: 120px;
+}
+
+footer .footer-rights{
+  text-align: center;
+  color: grey;
+  padding: 12px 0px;
+}
